--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
-  "name": "portfolio",
-  "version": "1.0.0",
+  "name": "vuongkhacduy-portfolio",
   "private": true,
-  "homepage": "https://VuongKhacDuy.github.io",
-  "dependencies": {
-    "react-router-dom": "^7.8.2",
-    "vite": "^7.1.4"
-  },
-  "devDependencies": {
-    "gh-pages": "^6.3.0"
-  },
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "npm run build && git add dist -f && git commit -m \"Deploy\" && git subtree push --prefix dist origin gh-pages"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "vite": "^4.4.5"
   }
 }
